# FXMarketSim

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  start.sh
backend/: Cargo.toml
backend/src/: broker.rs  main.rs  market.rs  orderbook.rs  participants.rs  price_feed.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AccountInfo.vue  BrokerSelector.vue  MarketConfiguration.vue  MarketData.vue  OrderBook.vue  PriceChart.vue  TradingInterface.vue
frontend/src/stores/: brokerStore.js  market.js  marketEngine.js
src/: App.vue  main.js
src/assets/: base.css
src/components/: BrokerSelector.vue  MarketData.vue  OrderBook.vue  PriceChart.vue
src/router/: index.js
src/stores/: market.js
